# Agentic-AI-API

./: Dockerfile  README.md  app.py  docker-compose.yml  prompting.ipynb  pyproject.toml
core/: __init__.py  config.py
router/: emotion_art_router.py  nutritionist_router.py  python_code_guru.py  review_summariser.py
schemas/: code_guru_schema.py  emotion_art_schema.py  nutritonist_schema.py  product_review_schema.py
services/: gemini_service.py
utils/: other_functions.py  prompts.py
